# notes-back-python

./: main.py  pyproject.toml  requirements.txt  run.py  test.db
__tests__/: conftest.py  test_login.py  test_notes.py
app/core/: database.py  security.py
app/models/: models.py  user_model.py
app/routes/: login_routes.py  note_router.py  user_routes.py
app/schemas/: note_schema.py  user_schema.py
app/services/: notes_service.py  user_service.py
